WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179628
Occasional MobileSafari crash under -[WKPDFView web_setMinimumSize:]
https://bugs.webkit.org/show_bug.cgi?id=179628
Summary
Occasional MobileSafari crash under -[WKPDFView web_setMinimumSize:]
Tim Horton
Reported
2017-11-13 13:09:04 PST
Occasional MobileSafari crash under -[WKPDFView web_setMinimumSize:]
Attachments
Patch
(1.81 KB, patch)
2017-11-13 13:09 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-11-13 13:09:32 PST
Created
attachment 326785
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-13 14:22:32 PST
Comment on
attachment 326785
[details]
Patch Clearing flags on attachment: 326785 Committed
r224781
: <
https://trac.webkit.org/changeset/224781
>
WebKit Commit Bot
Comment 3
2017-11-13 14:22:33 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 09:33:10 PST
<
rdar://problem/35561920
>
Garvan Keeley
Comment 5
2017-11-22 12:38:37 PST
Just mentioning for your consideration that our app's crash reports for this mention a NaN in CGSize (in UIScrollView setBounds), hopefully the added CGRectIsNull() check higher in the call stack is preventing the NaN.
Tim Horton
Comment 6
2017-11-22 14:20:03 PST
(In reply to Garvan Keeley from
comment #5
)
> Just mentioning for your consideration that our app's crash reports for this > mention a NaN in CGSize (in UIScrollView setBounds), hopefully the added > CGRectIsNull() check higher in the call stack is preventing the NaN.
That’s the plan, anyway!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug