Source/WebKit/UIProcess/ios/WKPDFView.mm
@@ -411,6 +411,8 @@ static void detachViewForPage(PDFPageInfo& page)
         CGSize pageSize = [page cropBoxAccountForRotation].size;
         pageFrame.size.height = pageSize.height / pageSize.width * pageFrame.size.width;
         CGRect pageFrameWithMarginApplied = CGRectInset(pageFrame, pdfPageMargin, pdfPageMargin);
+        if (CGRectIsNull(pageFrameWithMarginApplied))
+            pageFrameWithMarginApplied = CGRectZero;
 
         PDFPageInfo pageInfo;
         pageInfo.page = page;
